[gd_scene load_steps=3 format=3 uid="uid://dd7ey27i52xjy"]

[ext_resource type="Script" path="res://core/turn-based/command_menu/command_menu.gd" id="1_c85m2"]
[ext_resource type="PackedScene" uid="uid://d1nk26pkpy84a" path="res://core/turn-based/command_menu/command_button.tscn" id="1_x5nwc"]

[node name="CommandMenu" type="CanvasLayer"]
script = ExtResource("1_c85m2")

[node name="MainCommands" type="VBoxContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -85.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 5
alignment = 1

[node name="AttackButton" parent="MainCommands" instance=ExtResource("1_x5nwc")]
unique_name_in_owner = true
layout_mode = 2

[node name="SkillsButton" parent="MainCommands" instance=ExtResource("1_x5nwc")]
unique_name_in_owner = true
layout_mode = 2
text = "Skills"

[node name="RunButton" parent="MainCommands" instance=ExtResource("1_x5nwc")]
unique_name_in_owner = true
layout_mode = 2
text = "Run"

[node name="SkillCommands" type="VBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -85.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 5
alignment = 1
